# nonebot-plugin-chatppt

./: README.md  pyproject.toml
nonebot_plugin_chatppt/: __init__.py  config.py  core.py
